# CellularAutomata2D

./: CMakeLists.txt  Cell.cpp  Grid.cpp  README.md  main.cpp
GridManager/: Grid.cpp  Grid.h  Nodes.cpp  Nodes.h
Include/: Cell.h  Grid.h
